k8s/ingress/board-platform.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-platform
  namespace: board
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: auth.bettercodelab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
    - host: log.bettercodelab.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
    - host: board.bettercodelab.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
    - host: book.bettercodelab.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
